refactor: clean up backend service and repository warnings
- fix Spring nullability annotations
- replace generic exceptions with custom exceptions
- improve scraper logging and interrupt handling
- simplify Yield entity mapping